--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
             android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/email_edittext_login" android:background="@android:color/background_light"
+            android:id="@+id/email_edittext_login"
+            android:background="@drawable/rounded_edittext_login_register"
             android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.424" android:layout_marginTop="32dp"
@@ -28,12 +29,25 @@
             app:layout_constraintEnd_toEndOf="@+id/email_edittext_login" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/email_edittext_login"
             app:layout_constraintHorizontal_bias="0.503" android:paddingLeft="10dp"
-            android:background="@android:color/background_light"/>
+            android:background="@drawable/rounded_edittext_login_register" android:hint="Password"/>
     <Button
             android:text="Login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_button"
+            android:textColor="@android:color/white"
             android:id="@+id/login_button_login" app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
             app:layout_constraintEnd_toEndOf="@+id/password_edittext_login" android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"/>
+    <TextView
+            android:text="Back to registration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:id="@+id/back_to_register_textview_login"
+            app:layout_constraintStart_toStartOf="@+id/login_button_login"
+            app:layout_constraintEnd_toEndOf="@+id/login_button_login" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/login_button_login"
+            android:textColor="#ffffff"/>
 </android.support.constraint.ConstraintLayout>
