--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@android:color/background_light"
+            android:background="@drawable/rounded_edittext_login_register"
             android:hint="Username"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
             app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
             app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"
             app:layout_constraintHorizontal_bias="0.475"
-            android:background="@android:color/background_light"
+            android:background="@drawable/rounded_edittext_login_register"
             android:hint="Email" android:layout_marginTop="10dp" android:paddingLeft="10dp"/>
     <EditText
             android:layout_width="0dp"
@@ -43,7 +43,7 @@
             android:id="@+id/password_edittext_register"
             app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
             app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
-            android:background="@android:color/background_light"
+            android:background="@drawable/rounded_edittext_login_register"
             android:hint="Password"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
@@ -53,6 +53,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/register_button_register"
+            android:background="@drawable/rounded_button"
+            android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
             app:layout_constraintEnd_toEndOf="@+id/password_edittext_register" android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"
